--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,6 +13,6 @@
 		<%= city.description %>
 	</h3>
 
-	<h4><a href="http://localhost:3000/">BACK</a></h4>
+	<h4><a href="/">BACK</a></h4>
 </body>
 </html>
